fix(popover): update styling for caret alignment

--- a/app/components/primer/beta/popover.pcss
+++ b/app/components/primer/beta/popover.pcss
@@ -38,9 +38,9 @@
 
   &::after {
     top: -14px;
-    margin-left: -8px;
+    margin-left: -7px;
     /* stylelint-disable-next-line primer/borders */
-    border: 7px solid transparent;
+    border: 8px solid transparent;
     /* stylelint-disable-next-line primer/colors */
     border-bottom-color: var(--overlay-bgColor);
   }
